syntax = "proto3";

service rpcbin {
  rpc Delay (DelayMessage) returns (DelayResponse) {}
  rpc Status (StatusMessage) returns (StatusResponse) {}
}

message DelayMessage {
  int64 delay = 1;
}

message DelayResponse {}

message StatusMessage {
  enum Code {
    OK = 0;
    Canceled = 1;
    Unknown = 2;
    InvalidArgument = 3;
    DeadlineExceeded = 4;
    NotFound = 5;
    AlreadyExists = 6;
    PermissionDenied = 7;
    ResourceExhausted = 8;
    FailedPrecondition = 9;
    Aborted = 10;
    OutOfRange = 11;
    Unimplemented = 12;
    Internal = 13;
    Unavailable = 14;
    DataLoss = 15;
    Unauthenticated = 16;
  }
  Code code = 1;
}

message StatusResponse {}
